# pytoui

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  claude_ctx.txt  compat.md  mouse_plan.py  pyproject.toml  todo.md
.github/workflows/: build.yml  run_tests.yml
examples/: button.py  demo.py  flex.py  key_commands.py  label.py  layouting.py  mouse_wheel.py  multi_window.py  multitouch.py  segmented.py  slider.py  switch.py  text.py  vertical_slider.py
examples/components/: button.py  datepicker.py  label.py  navigation.py  paging.py  scrollview.py  segmented.py  slider_horizontal.py  slider_vertical.py  switch.py  webview.py
examples/custom/: controls.py  ds1.py
lib/osdbuf/: Cargo.toml
lib/winitrt/: Cargo.toml
lib/winitrt/.cargo/: config.toml
osdbuf/: libosdbuf.h  osdbuf.h
osdbuf/src/: helpers.rs  lib.rs
resources/: image_ctx_flow.md
resources/reference/: ui.html
resources/stubgen/: _ui_stubs.py.bak  ui_mirror.py.bak  ui_stubs.py.bak  ui_stubs.pyi
scripts/: get_pytoui.py  pre_build.py  prune_pytoui.py  run_python_mipsel.sh  try_pytoui.py
src/: console.pyi  dialogs.pyi  objc_util.pyi  ui.pyi  ui_stubs.pyi
src/osdbuf/: __init__.py
src/pytoui/: _base_runtime.py  _fonts.py  _hid.py  _kb.py  _osdbuf.py  _platform.py  _sdlrt.py  _version.py  _winitrt.py  base_runtime.py  console.py  helpers.py  objc_util.py
src/pytoui/ui/: __init__.py  _activity_indicator.py  _button.py  _button_item.py  _constants.py  _date_picker.py  _draw.py  _final.py  _fonts.py  _image.py  _image_view.py  _imageview.py  _internals.py  _kb.py  _label.py  _navigation_view.py  _runtime.py  _scroll_view.py  _scrollview.py  _segmented_control.py  _serialize.py  _slider.py  _switch.py  _table_view.py  _text_field.py  _text_view.py  _types.py  _view.py  _web_view.py  demo.py  demo2.py
src/pytoui/ui/custom/: __init__.py  _liquid_date_picker.py  _liquid_time_picker.py  _slider_vertical.py  _wheel_selector.py
src/sdlrt/: __init__.py
src/ui/: __init__.py  _activity_indicator.py  _button.py  _draw.py  _image.py  _imageview.py  _label.py  _runtime.py  _segmented_control.py  _slider.py  _switch.py  _types.py  _version.py  _view.py  demo.py  demo2.py
src/winitrt/: __init__.py
tests/: getset_descriptor_test.py  imports_test.py  objc_proxy_test.py
winitrt/: winitrt.h
winitrt/src/: lib.rs
